fix atropos text in div + disable atropos on mobile

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -516,4 +516,9 @@ $light: #efefef;
     .hide{
         transform: translateY(100%) !important;
     }
+
+    .atropos-inner div{
+        left: 50%;
+        --tw-translate-x: -50%;
+    }
 }
